--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,10 +1,11 @@
-@import './base/base';
+@import './utils/variables';
+@import './utils/mixins';
+@import './utils/functions';
+
 @import './base/typography';
+@import './base/base';
 
 @import './components/buttons';
 
 @import './layout/header';
-
-@import './utils/variables';
-@import './utils/mixins';
-@import './utils/functions';
+@import './layout/game-info';
