Game grid including holes & moles.

--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -1,1 +1,2 @@
-@import url('https://fonts.googleapis.com/css?family=Press+Start+2P'); //font-family: 'Press Start 2P', cursive;
+@import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
+//font-family: 'Press Start 2P', cursive;
