--- a/assets/sass/layout/_game-info.scss
+++ b/assets/sass/layout/_game-info.scss
@@ -2,6 +2,7 @@ section.game-info{
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 350px;
 
   div.game-info__info-block{
     color: #FFF;
