--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,7 @@ section.game-info {
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 350px;
 }
 section.game-info div.game-info__info-block {
   color: #FFF;
@@ -66,6 +67,55 @@ section.game-info div.game-info__start-game button {
   text-align: center;
   text-transform: uppercase;
   cursor: pointer;
+}
+
+section.game div.game__container {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-gap: 10px;
+  padding: 5px;
+}
+@media (min-width: 640px) {
+  section.game div.game__container {
+    max-width: 700px;
+    margin: 0 auto;
+    grid-gap: 50px;
+  }
+}
+section.game div.game__container div#hole1 {
+  grid-column: 1/3;
+}
+section.game div.game__container div#hole2 {
+  grid-column: 3/5;
+}
+section.game div.game__container div#hole3 {
+  grid-column: 5/7;
+}
+section.game div.game__container div#hole4 {
+  grid-column: 2/4;
+}
+section.game div.game__container div#hole5 {
+  grid-column: 4/6;
+}
+
+div.hole {
+  position: relative;
+  border: 1px solid blue;
+  overflow: hidden;
+}
+div.hole img.hole__hole {
+  width: 100%;
+}
+div.hole img.hole__mole {
+  z-index: -1;
+  width: 50%;
+  position: absolute;
+  left: 50%;
+  bottom: 0px;
+  transform: translateX(-50%);
+  transition: 0.3s;
+  bottom: -100%;
 }
 
 /*# sourceMappingURL=style.css.map */
