--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -4,6 +4,7 @@ header{
   justify-content: space-between;
   align-items: center;
   height: 50px;
+  background-color: $colour-sky;
 
   h1.header__title{
     font-size: 1.2em;
