Bugfix: can now click on mole. Mole hides after being clicked on.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,13 +110,8 @@ section.game div.game__container div#hole5 {
 div.hole {
   position: relative;
   overflow: hidden;
-  pointer-events: none;
-}
-div.hole img.hole__hole {
-  width: 100%;
 }
 div.hole img.hole__mole {
-  z-index: -1;
   width: 50%;
   position: absolute;
   left: 50%;
@@ -125,6 +120,11 @@ div.hole img.hole__mole {
   transition: 0.3s;
   bottom: 0;
   cursor: pointer;
+}
+div.hole img.hole__hole {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
 }
 
 /*# sourceMappingURL=style.css.map */
