--- a/assets/sass/layout/_game-info.scss
+++ b/assets/sass/layout/_game-info.scss
@@ -4,7 +4,7 @@ section.game-info{
   align-items: center;
   padding-bottom: 100px;
   box-sizing: border-box;
-  background-image: url(./../../../images/background-small.png);
+  background-image: url(./../../images/background-small.png);
   background-repeat: repeat-x;
   background-position: bottom;
   background-color: $colour-sky;
@@ -27,7 +27,13 @@ section.game-info{
   div.game-info__start-game{
     width: 170px;
     max-width: 170px;
-    margin: 15px 0px;
+    margin-top: 15px;
+
+    p{
+      color: #FFF;
+      text-align: center;
+      margin-bottom: 0;
+    }
 
     button{
       width: 100%;
@@ -38,6 +44,8 @@ section.game-info{
       text-align: center;
       text-transform: uppercase;
       cursor: pointer;
+      margin: 0;
+      height: 15px;
     }
   }
 }
