--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,7 @@ section.game-info div.game-info__info-block p {
   margin: 8px;
 }
 section.game-info div.game-info__start-game {
-  width: 170px;
+  width: 200px;
   max-width: 170px;
   margin-top: 15px;
 }
@@ -81,6 +81,7 @@ section.game-info div.game-info__start-game p {
   color: #FFF;
   text-align: center;
   margin-bottom: 0;
+  text-transform: uppercase;
 }
 section.game-info div.game-info__start-game button {
   width: 100%;
@@ -92,7 +93,7 @@ section.game-info div.game-info__start-game button {
   text-transform: uppercase;
   cursor: pointer;
   margin: 0;
-  height: 15px;
+  font-size: 1em;
 }
 
 section.game {
