--- a/assets/sass/layout/_game-info.scss
+++ b/assets/sass/layout/_game-info.scss
@@ -25,7 +25,7 @@ section.game-info{
   }
 
   div.game-info__start-game{
-    width: 170px;
+    width: 200px;
     max-width: 170px;
     margin-top: 15px;
 
@@ -33,6 +33,7 @@ section.game-info{
       color: #FFF;
       text-align: center;
       margin-bottom: 0;
+      text-transform: uppercase;
     }
 
     button{
@@ -45,7 +46,7 @@ section.game-info{
       text-transform: uppercase;
       cursor: pointer;
       margin: 0;
-      height: 15px;
+      font-size: 1em;
     }
   }
 }
